--- a/resources.qrc
+++ b/resources.qrc
@@ -5,5 +5,6 @@
     <qresource prefix="/icons">
         <file alias="application-exit">resources/icons/application-exit.svg</file>
         <file alias="tabulator">resources/icons/tabulator.svg</file>
+        <file alias="document-properties">resources/icons/document-properties.svg</file>
     </qresource>
 </RCC>
