--- a/resources.qrc
+++ b/resources.qrc
@@ -1,10 +1,10 @@
 <RCC>
     <qresource prefix="/logos">
-        <file alias="tabulator">resources/logos/tabulator.svg</file>
+        <file alias="tabulator.svg">resources/logos/tabulator.svg</file>
     </qresource>
     <qresource prefix="/icons">
-        <file alias="application-exit">resources/icons/application-exit.svg</file>
-        <file alias="tabulator">resources/icons/tabulator.svg</file>
-        <file alias="document-properties">resources/icons/document-properties.svg</file>
+        <file alias="application-exit.svg">resources/icons/application-exit.svg</file>
+        <file alias="document-properties.svg">resources/icons/document-properties.svg</file>
+        <file alias="tabulator.svg">resources/icons/tabulator.svg</file>
     </qresource>
 </RCC>
