--- a/resources.qrc
+++ b/resources.qrc
@@ -1,10 +1,12 @@
 <RCC>
-    <qresource prefix="/logos">
-        <file alias="tabulator.svg">resources/logos/tabulator.svg</file>
+    <qresource prefix="/icons/apps/22">
+        <file alias="tabulator.svg">resources/icons/apps/22/tabulator.svg</file>
     </qresource>
-    <qresource prefix="/icons">
-        <file alias="application-exit.svg">resources/icons/application-exit.svg</file>
-        <file alias="document-properties.svg">resources/icons/document-properties.svg</file>
-        <file alias="tabulator.svg">resources/icons/tabulator.svg</file>
+    <qresource prefix="/icons/apps/16">
+        <file alias="tabulator.svg">resources/icons/apps/16/tabulator.svg</file>
+    </qresource>
+    <qresource prefix="/icons/actions/16">
+        <file alias="configure.svg">resources/icons/actions/16/configure.svg</file>
+        <file alias="application-exit.svg">resources/icons/actions/16/application-exit.svg</file>
     </qresource>
 </RCC>
