--- a/icons.qrc
+++ b/icons.qrc
@@ -5,6 +5,7 @@
         <file alias="document-new.svg">icons/actions/16/document-new.svg</file>
         <file alias="document-open.svg">icons/actions/16/document-open.svg</file>
         <file alias="document-open-recent.svg">icons/actions/16/document-open-recent.svg</file>
+        <file alias="document-save.svg">icons/actions/16/document-save.svg</file>
         <file alias="document-close.svg">icons/actions/16/document-close.svg</file>
         <file alias="view-fullscreen.svg">icons/actions/16/view-fullscreen.svg</file>
         <file alias="view-restore.svg">icons/actions/16/view-restore.svg</file>
