--- a/icons.qrc
+++ b/icons.qrc
@@ -6,6 +6,7 @@
         <file alias="document-open.svg">icons/actions/16/document-open.svg</file>
         <file alias="document-open-recent.svg">icons/actions/16/document-open-recent.svg</file>
         <file alias="document-save.svg">icons/actions/16/document-save.svg</file>
+        <file alias="document-save-as.svg">icons/actions/16/document-save-as.svg</file>
         <file alias="document-close.svg">icons/actions/16/document-close.svg</file>
         <file alias="view-fullscreen.svg">icons/actions/16/view-fullscreen.svg</file>
         <file alias="view-restore.svg">icons/actions/16/view-restore.svg</file>
